// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserFavorites should render correctly when 0 favorites 1`] = `
.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding-top: 40px;
  padding-bottom: 40px;
  width: 1120px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-right: 32px;
  margin-left: 32px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c3 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c6 {
  background: #ffffff;
  border-radius: 12px;
  padding: 13px;
  width: 248px;
  height: 248px;
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  color: #2d9cdb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-right: 8px;
  margin-left: 8px;
}

.c7 {
  background: #ffffff;
  border-radius: 12px;
  width: 248px;
  height: 248px;
  margin-right: 8px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  background: #c6c6c6;
  border-radius: 8px;
  width: 221px;
  height: 28px;
  margin-bottom: 8px;
}

.c9 {
  background: #c6c6c6;
  border-radius: 8px;
  width: 130px;
  height: 28px;
  margin-bottom: 8px;
}

.c10 {
  background: #c6c6c6;
  border-radius: 3px;
  width: 221px;
  height: 14px;
  margin-bottom: 5px;
  margin-left: 13px;
}

.c11 {
  background: #c6c6c6;
  border-radius: 3px;
  width: 200px;
  height: 14px;
  margin-bottom: 5px;
  margin-left: 13px;
}

.c12 {
  background: #c6c6c6;
  border-radius: 3px;
  width: 180px;
  height: 14px;
  margin-bottom: 5px;
  margin-left: 13px;
}

.c13 {
  background: #c6c6c6;
  height: 50px;
  width: 100%;
  border-radius: 0px 0px 12px 12px;
  margin-top: 16px;
  padding-top: 18px;
  padding-left: 50px;
}

.c14 {
  background: #ffffff;
  border-radius: 3px;
  width: 180px;
  height: 14px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <button
      className="btn black active"
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-star-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"star\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18zM12 16.1a.92.92 0 0 1 .46.11l3.77 2-.72-4.21a1 1 0 0 1 .29-.89l3-2.93-4.2-.62a1 1 0 0 1-.71-.56L12 5.25 10.11 9a1 1 0 0 1-.75.54l-4.2.62 3 2.93a1 1 0 0 1 .29.89l-.72 4.16 3.77-2a.92.92 0 0 1 .5-.04z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-star\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"star\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-file-add-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"file-add\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M19.74 8.33l-5.44-6a1 1 0 0 0-.74-.33h-7A2.53 2.53 0 0 0 4 4.5v15A2.53 2.53 0 0 0 6.56 22h10.88A2.53 2.53 0 0 0 20 19.5V9a1 1 0 0 0-.26-.67zM14 5l2.74 3h-2a.79.79 0 0 1-.74-.85zm3.44 15H6.56a.53.53 0 0 1-.56-.5v-15a.53.53 0 0 1 .56-.5H12v3.15A2.79 2.79 0 0 0 14.71 10H18v9.5a.53.53 0 0 1-.56.5z\\"/><path d=\\"M14 13h-1v-1a1 1 0 0 0-2 0v1h-1a1 1 0 0 0 0 2h1v1a1 1 0 0 0 2 0v-1h1a1 1 0 0 0 0-2z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-file-add\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"file-add\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M19.74 7.33l-4.44-5a1 1 0 0 0-.74-.33h-8A2.53 2.53 0 0 0 4 4.5v15A2.53 2.53 0 0 0 6.56 22h10.88A2.53 2.53 0 0 0 20 19.5V8a1 1 0 0 0-.26-.67zM14 15h-1v1a1 1 0 0 1-2 0v-1h-1a1 1 0 0 1 0-2h1v-1a1 1 0 0 1 2 0v1h1a1 1 0 0 1 0 2zm.71-7a.79.79 0 0 1-.71-.85V4l3.74 4z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-person-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"person\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z\\"/><path d=\\"M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-person\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"person\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4z\\"/><path d=\\"M18 21a1 1 0 0 0 1-1 7 7 0 0 0-14 0 1 1 0 0 0 1 1z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-log-out-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"log-out\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M7 6a1 1 0 0 0 0-2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h2a1 1 0 0 0 0-2H6V6z\\"/><path d=\\"M20.82 11.42l-2.82-4a1 1 0 0 0-1.39-.24 1 1 0 0 0-.24 1.4L18.09 11H10a1 1 0 0 0 0 2h8l-1.8 2.4a1 1 0 0 0 .2 1.4 1 1 0 0 0 .6.2 1 1 0 0 0 .8-.4l3-4a1 1 0 0 0 .02-1.18z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-log-out\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"log-out\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M7 6a1 1 0 0 0 0-2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h2a1 1 0 0 0 0-2H6V6z\\"/><path d=\\"M20.82 11.42l-2.82-4a1 1 0 0 0-1.39-.24 1 1 0 0 0-.24 1.4L18.09 11H10a1 1 0 0 0 0 2h8l-1.8 2.4a1 1 0 0 0 .2 1.4 1 1 0 0 0 .6.2 1 1 0 0 0 .8-.4l3-4a1 1 0 0 0 .02-1.18z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "marginLeft": "40px",
            "marginRight": "40px",
          }
        }
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            Vous avez
          </div>
          <div
            className="c4"
          >
            0
          </div>
          <div
            className="c3"
          >
            UserFavorites.fiches sauvegardée
          </div>
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          UserFavorites.Comment ajouter
          <button
            className="btn tuto mr-10"
            onClick={[Function]}
          >
            <span
              className="mr-10"
            >
              <i
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-video\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"video\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M21 7.15a1.7 1.7 0 0 0-1.85.3l-2.15 2V8a3 3 0 0 0-3-3H5a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h9a3 3 0 0 0 3-3v-1.45l2.16 2a1.74 1.74 0 0 0 1.16.45 1.68 1.68 0 0 0 .69-.15 1.6 1.6 0 0 0 1-1.48V8.63A1.6 1.6 0 0 0 21 7.15z\\"/></g></g></svg>",
                  }
                }
              />
            </span>
            UserFavorites.Voir la vidéo
          </button>
        </div>
        <div
          className="c7"
        >
          <div
            style={
              Object {
                "padding": "13px",
              }
            }
          >
            <div
              className="c8"
              width="221px"
            />
            <div
              className="c9"
              width="130px"
            />
          </div>
          <div>
            <div
              className="c10"
              width="221px"
            />
            <div
              className="c11"
              width="200px"
            />
            <div
              className="c10"
              width="221px"
            />
            <div
              className="c12"
              width="180px"
            />
            <div
              className="c13"
            >
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            style={
              Object {
                "padding": "13px",
              }
            }
          >
            <div
              className="c8"
              width="221px"
            />
            <div
              className="c9"
              width="130px"
            />
          </div>
          <div>
            <div
              className="c10"
              width="221px"
            />
            <div
              className="c11"
              width="200px"
            />
            <div
              className="c10"
              width="221px"
            />
            <div
              className="c12"
              width="180px"
            />
            <div
              className="c13"
            >
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            style={
              Object {
                "padding": "13px",
              }
            }
          >
            <div
              className="c8"
              width="221px"
            />
            <div
              className="c9"
              width="130px"
            />
          </div>
          <div>
            <div
              className="c10"
              width="221px"
            />
            <div
              className="c11"
              width="200px"
            />
            <div
              className="c10"
              width="221px"
            />
            <div
              className="c12"
              width="180px"
            />
            <div
              className="c13"
            >
              <div
                className="c14"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserFavorites should render correctly when 3 favorites 1`] = `
.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding-top: 40px;
  padding-bottom: 40px;
  width: 1120px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c7 {
  width: 248px;
  height: 248px;
  margin-top: 8px;
  margin-bottom: 8px;
  margin-right: 8px;
  margin-left: 8px;
  z-index: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-right: 32px;
  margin-left: 32px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c4 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c2 {
  margin-right: 40px;
  margin-left: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <button
      className="btn black active"
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-star-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"star\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18zM12 16.1a.92.92 0 0 1 .46.11l3.77 2-.72-4.21a1 1 0 0 1 .29-.89l3-2.93-4.2-.62a1 1 0 0 1-.71-.56L12 5.25 10.11 9a1 1 0 0 1-.75.54l-4.2.62 3 2.93a1 1 0 0 1 .29.89l-.72 4.16 3.77-2a.92.92 0 0 1 .5-.04z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-star\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"star\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-file-add-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"file-add\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M19.74 8.33l-5.44-6a1 1 0 0 0-.74-.33h-7A2.53 2.53 0 0 0 4 4.5v15A2.53 2.53 0 0 0 6.56 22h10.88A2.53 2.53 0 0 0 20 19.5V9a1 1 0 0 0-.26-.67zM14 5l2.74 3h-2a.79.79 0 0 1-.74-.85zm3.44 15H6.56a.53.53 0 0 1-.56-.5v-15a.53.53 0 0 1 .56-.5H12v3.15A2.79 2.79 0 0 0 14.71 10H18v9.5a.53.53 0 0 1-.56.5z\\"/><path d=\\"M14 13h-1v-1a1 1 0 0 0-2 0v1h-1a1 1 0 0 0 0 2h1v1a1 1 0 0 0 2 0v-1h1a1 1 0 0 0 0-2z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-file-add\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"file-add\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M19.74 7.33l-4.44-5a1 1 0 0 0-.74-.33h-8A2.53 2.53 0 0 0 4 4.5v15A2.53 2.53 0 0 0 6.56 22h10.88A2.53 2.53 0 0 0 20 19.5V8a1 1 0 0 0-.26-.67zM14 15h-1v1a1 1 0 0 1-2 0v-1h-1a1 1 0 0 1 0-2h1v-1a1 1 0 0 1 2 0v1h1a1 1 0 0 1 0 2zm.71-7a.79.79 0 0 1-.71-.85V4l3.74 4z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-person-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"person\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z\\"/><path d=\\"M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-person\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"person\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4z\\"/><path d=\\"M18 21a1 1 0 0 0 1-1 7 7 0 0 0-14 0 1 1 0 0 0 1 1z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-log-out-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"log-out\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M7 6a1 1 0 0 0 0-2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h2a1 1 0 0 0 0-2H6V6z\\"/><path d=\\"M20.82 11.42l-2.82-4a1 1 0 0 0-1.39-.24 1 1 0 0 0-.24 1.4L18.09 11H10a1 1 0 0 0 0 2h8l-1.8 2.4a1 1 0 0 0 .2 1.4 1 1 0 0 0 .6.2 1 1 0 0 0 .8-.4l3-4a1 1 0 0 0 .02-1.18z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-log-out\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"log-out\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M7 6a1 1 0 0 0 0-2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h2a1 1 0 0 0 0-2H6V6z\\"/><path d=\\"M20.82 11.42l-2.82-4a1 1 0 0 0-1.39-.24 1 1 0 0 0-.24 1.4L18.09 11H10a1 1 0 0 0 0 2h8l-1.8 2.4a1 1 0 0 0 .2 1.4 1 1 0 0 0 .6.2 1 1 0 0 0 .8-.4l3-4a1 1 0 0 0 .02-1.18z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            Vous avez
          </div>
          <div
            className="c5"
          >
            3
          </div>
          <div
            className="c4"
          >
            UserFavorites.fiches sauvegardées
          </div>
        </div>
        <div>
          <button
            className="btn outline-black"
            data-test-id="test-delete-button"
            onClick={[Function]}
          >
            <span
              className="mr-10"
            >
              <i
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-trash-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"trash\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M21 6h-5V4.33A2.42 2.42 0 0 0 13.5 2h-3A2.42 2.42 0 0 0 8 4.33V6H3a1 1 0 0 0 0 2h1v11a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V8h1a1 1 0 0 0 0-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4zM18 19a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V8h12z\\"/></g></g></svg>",
                  }
                }
              />
            </span>
            UserFavorites.Tout supprimer
          </button>
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <div
            className="card-col puff-in-center dispositif"
          >
            <a
              href="/program/id1"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="custom-card border-none card"
              >
                <div
                  className="card-body"
                >
                  <div
                    className="container bookmark-icon pinned"
                    data-test-id="test-toggle-pin-id1"
                    onClick={[Function]}
                  >
                    <span>
                      <i
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-star\\" fill=\\"#fbfbfb\\"><g data-name=\\"Layer 2\\"><g data-name=\\"star\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18z\\"/></g></g></svg>",
                          }
                        }
                      />
                    </span>
                  </div>
                  <h5>
                    tinfo1
                  </h5>
                  <p
                    className="text"
                  >
                    abstract1
                  </p>
                </div>
                <div
                  className="correct-radius align-right bg-Français card-footer"
                >
                  <div
                    style={
                      Object {
                        "alignItems": "flex-start",
                        "display": "flex",
                        "justifyContent": "flex-start",
                        "width": 35,
                      }
                    }
                  />
                  <span>
                    titreMarque1
                  </span>
                </div>
              </div>
            </a>
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="card-col puff-in-center dispositif"
          >
            <a
              href="/program/id2"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="custom-card border-none card"
              >
                <div
                  className="card-body"
                >
                  <div
                    className="container bookmark-icon pinned"
                    data-test-id="test-toggle-pin-id2"
                    onClick={[Function]}
                  >
                    <span>
                      <i
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-star\\" fill=\\"#fbfbfb\\"><g data-name=\\"Layer 2\\"><g data-name=\\"star\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18z\\"/></g></g></svg>",
                          }
                        }
                      />
                    </span>
                  </div>
                  <h5>
                    tinfo2
                  </h5>
                  <p
                    className="text"
                  >
                    abstract2
                  </p>
                </div>
                <div
                  className="correct-radius align-right bg-Administratif card-footer"
                >
                  <div
                    style={
                      Object {
                        "alignItems": "flex-start",
                        "display": "flex",
                        "justifyContent": "flex-start",
                        "width": 35,
                      }
                    }
                  />
                  <span>
                    titreMarque2
                  </span>
                </div>
              </div>
            </a>
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="card-col puff-in-center demarche"
          >
            <a
              href="/procedure/id3"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="custom-card texte-Logement bg-light-Logement border-Logement card"
              >
                <div
                  className="card-body"
                >
                  <div
                    className="container bookmark-icon pinned"
                    data-test-id="test-toggle-pin-id3"
                    onClick={[Function]}
                  >
                    <span>
                      <i
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-star\\" fill=\\"#fbfbfb\\"><g data-name=\\"Layer 2\\"><g data-name=\\"star\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18z\\"/></g></g></svg>",
                          }
                        }
                      />
                    </span>
                  </div>
                  <h5>
                    tinfo3
                  </h5>
                  <p
                    className="text"
                  >
                    abstract3
                  </p>
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserFavorites should render correctly when loading 1`] = `
.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding-top: 40px;
  padding-bottom: 40px;
  width: 1120px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-right: 32px;
  margin-left: 32px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c3 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c6 {
  background: #ffffff;
  border-radius: 12px;
  width: 248px;
  height: 248px;
  margin-right: 8px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  background: #c6c6c6;
  height: 50px;
  width: 100%;
  border-radius: 0px 0px 12px 12px;
  margin-top: 16px;
  padding-top: 18px;
  padding-left: 50px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="container"
  >
    <button
      className="btn black active"
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-star-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"star\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18zM12 16.1a.92.92 0 0 1 .46.11l3.77 2-.72-4.21a1 1 0 0 1 .29-.89l3-2.93-4.2-.62a1 1 0 0 1-.71-.56L12 5.25 10.11 9a1 1 0 0 1-.75.54l-4.2.62 3 2.93a1 1 0 0 1 .29.89l-.72 4.16 3.77-2a.92.92 0 0 1 .5-.04z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-star\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"star\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-file-add-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"file-add\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M19.74 8.33l-5.44-6a1 1 0 0 0-.74-.33h-7A2.53 2.53 0 0 0 4 4.5v15A2.53 2.53 0 0 0 6.56 22h10.88A2.53 2.53 0 0 0 20 19.5V9a1 1 0 0 0-.26-.67zM14 5l2.74 3h-2a.79.79 0 0 1-.74-.85zm3.44 15H6.56a.53.53 0 0 1-.56-.5v-15a.53.53 0 0 1 .56-.5H12v3.15A2.79 2.79 0 0 0 14.71 10H18v9.5a.53.53 0 0 1-.56.5z\\"/><path d=\\"M14 13h-1v-1a1 1 0 0 0-2 0v1h-1a1 1 0 0 0 0 2h1v1a1 1 0 0 0 2 0v-1h1a1 1 0 0 0 0-2z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-file-add\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"file-add\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M19.74 7.33l-4.44-5a1 1 0 0 0-.74-.33h-8A2.53 2.53 0 0 0 4 4.5v15A2.53 2.53 0 0 0 6.56 22h10.88A2.53 2.53 0 0 0 20 19.5V8a1 1 0 0 0-.26-.67zM14 15h-1v1a1 1 0 0 1-2 0v-1h-1a1 1 0 0 1 0-2h1v-1a1 1 0 0 1 2 0v1h1a1 1 0 0 1 0 2zm.71-7a.79.79 0 0 1-.71-.85V4l3.74 4z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-person-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"person\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z\\"/><path d=\\"M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-person\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"person\\"><rect width=\\"24\\" height=\\"24\\" opacity=\\"0\\"/><path d=\\"M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4z\\"/><path d=\\"M18 21a1 1 0 0 0 1-1 7 7 0 0 0-14 0 1 1 0 0 0 1 1z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-log-out-outline\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"log-out\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M7 6a1 1 0 0 0 0-2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h2a1 1 0 0 0 0-2H6V6z\\"/><path d=\\"M20.82 11.42l-2.82-4a1 1 0 0 0-1.39-.24 1 1 0 0 0-.24 1.4L18.09 11H10a1 1 0 0 0 0 2h8l-1.8 2.4a1 1 0 0 0 .2 1.4 1 1 0 0 0 .6.2 1 1 0 0 0 .8-.4l3-4a1 1 0 0 0 .02-1.18z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20px\\" height=\\"20px\\" viewBox=\\"0 0 24 24\\" class=\\"eva eva-log-out\\" fill=\\"#fff\\"><g data-name=\\"Layer 2\\"><g data-name=\\"log-out\\"><rect width=\\"24\\" height=\\"24\\" transform=\\"rotate(90 12 12)\\" opacity=\\"0\\"/><path d=\\"M7 6a1 1 0 0 0 0-2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h2a1 1 0 0 0 0-2H6V6z\\"/><path d=\\"M20.82 11.42l-2.82-4a1 1 0 0 0-1.39-.24 1 1 0 0 0-.24 1.4L18.09 11H10a1 1 0 0 0 0 2h8l-1.8 2.4a1 1 0 0 0 .2 1.4 1 1 0 0 0 .6.2 1 1 0 0 0 .8-.4l3-4a1 1 0 0 0 .02-1.18z\\"/></g></g></svg>",
                }
              }
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "marginLeft": "40px",
            "marginRight": "40px",
          }
        }
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            Vous avez
          </div>
          <div
            className="c4"
          >
            ...
          </div>
          <div
            className="c3"
          >
            UserFavorites.fiche sauvegardée
          </div>
        </div>
      </div>
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <div
            style={
              Object {
                "padding": "13px",
              }
            }
          >
            <span
              aria-busy={true}
              aria-live="polite"
            >
              <span
                className="react-loading-skeleton"
                style={
                  Object {
                    "height": "28px",
                  }
                }
              >
                ‌
              </span>
              <br />
              <span
                className="react-loading-skeleton"
                style={
                  Object {
                    "height": "28px",
                  }
                }
              >
                ‌
              </span>
              <br />
            </span>
          </div>
          <div>
            <div
              style={
                Object {
                  "marginLeft": "13px",
                  "marginRight": "13px",
                }
              }
            >
              <span
                aria-busy={true}
                aria-live="polite"
              >
                <span
                  className="react-loading-skeleton"
                  style={
                    Object {
                      "height": "14px",
                    }
                  }
                >
                  ‌
                </span>
                <br />
                <span
                  className="react-loading-skeleton"
                  style={
                    Object {
                      "height": "14px",
                    }
                  }
                >
                  ‌
                </span>
                <br />
                <span
                  className="react-loading-skeleton"
                  style={
                    Object {
                      "height": "14px",
                    }
                  }
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
            <div
              className="c7"
            />
          </div>
        </div>
        <div
          className="c6"
        >
          <div
            style={
              Object {
                "padding": "13px",
              }
            }
          >
            <span
              aria-busy={true}
              aria-live="polite"
            >
              <span
                className="react-loading-skeleton"
                style={
                  Object {
                    "height": "28px",
                  }
                }
              >
                ‌
              </span>
              <br />
              <span
                className="react-loading-skeleton"
                style={
                  Object {
                    "height": "28px",
                  }
                }
              >
                ‌
              </span>
              <br />
            </span>
          </div>
          <div>
            <div
              style={
                Object {
                  "marginLeft": "13px",
                  "marginRight": "13px",
                }
              }
            >
              <span
                aria-busy={true}
                aria-live="polite"
              >
                <span
                  className="react-loading-skeleton"
                  style={
                    Object {
                      "height": "14px",
                    }
                  }
                >
                  ‌
                </span>
                <br />
                <span
                  className="react-loading-skeleton"
                  style={
                    Object {
                      "height": "14px",
                    }
                  }
                >
                  ‌
                </span>
                <br />
                <span
                  className="react-loading-skeleton"
                  style={
                    Object {
                      "height": "14px",
                    }
                  }
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
            <div
              className="c7"
            />
          </div>
        </div>
        <div
          className="c6"
        >
          <div
            style={
              Object {
                "padding": "13px",
              }
            }
          >
            <span
              aria-busy={true}
              aria-live="polite"
            >
              <span
                className="react-loading-skeleton"
                style={
                  Object {
                    "height": "28px",
                  }
                }
              >
                ‌
              </span>
              <br />
              <span
                className="react-loading-skeleton"
                style={
                  Object {
                    "height": "28px",
                  }
                }
              >
                ‌
              </span>
              <br />
            </span>
          </div>
          <div>
            <div
              style={
                Object {
                  "marginLeft": "13px",
                  "marginRight": "13px",
                }
              }
            >
              <span
                aria-busy={true}
                aria-live="polite"
              >
                <span
                  className="react-loading-skeleton"
                  style={
                    Object {
                      "height": "14px",
                    }
                  }
                >
                  ‌
                </span>
                <br />
                <span
                  className="react-loading-skeleton"
                  style={
                    Object {
                      "height": "14px",
                    }
                  }
                >
                  ‌
                </span>
                <br />
                <span
                  className="react-loading-skeleton"
                  style={
                    Object {
                      "height": "14px",
                    }
                  }
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
            <div
              className="c7"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
